Payment route setup done

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
-@plugin "daisyui"{
+@plugin "daisyui" {
   themes: light --default, dark;
 }
 
 @plugin "daisyui/theme" {
   name: "dark";
   default: true;
-  --color-primary: #CAEB66;
+  --color-primary: #caeb66;
   --color-secondary: teal;
 }
 
@@ -17,4 +17,7 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+.active {
+  @apply text-primary font-semibold underline underline-offset-4;
 }
